--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@ layout: default
           <h3>Awards</h3>
            <p>  National Scholarship, by Minstry of Education of China <br>
                 Nanjing University Excellent Student Leader Award <br>
-                Nanjing University Excellent Student Award 
+                Nanjing University Excellent Student Award <br>
 	        Top Volunteer Excellent Award</p>
    </div>    
    
    <div class="content" >      
           <h3>Miscellaneous</h3>
-           <p>Internship in CHANGJIANG ELEC. TECH. (JCET) <6span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  [Report]</a></span><br>
+           <p>Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  [Report]</a></span><br>
               Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> </p>      
    </div>
 	
