--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
    <div class="content anchor" id="research">  	      
           <h3>Research</h3>     
             <p><span style="font-weight: bold;">Single-Photon Detector, main contributor</span> <br>
-		Oct.2014-Dec,2015  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
+		Oct.2014-Dec.2015  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
 	    Designed a 64 road low-noise pre-amplifier using a symmetric structure 
             Drew 8 layers PCB; Altium
             Reduced noise by 100 times
