--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ layout: default
                       <li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
                       <li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
 		      <li>Andrew Ng. cs229: Machine Learning. Stanford.<br>
-                      <li>Fei-Fei Li & Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
-		      <li>Wei Guo & Jiangying Liu:C++ Programing Design. Peking University.
+                      <li>Fei-Fei Li &amp Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
+		      <li>Wei Guo &amp Jiangying Liu:C++ Programing Design. Peking University.
              </p>
     
    <div class="content anchor" id="research">  	      
           <h3>Research</h3>     
             <p><span style="font-weight: bold;">Single-Photon Detector, main contributor</span> <br>
-		Oct.2014-Dec.2015  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
+		Oct.2014-Dec.2015 &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
 	    Designed a 64 road low-noise pre-amplifier using a symmetric structure 
             Drew 8 layers PCB; Altium
             Reduced noise by 100 times
