--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: default
             Written a sugestion report to ministry of transportation 
                  
            <p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
-		   Aug.2016-present Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
+		   Aug.2016-present &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
 	   Collected point cloud datasets for indoor 3D scene reconstruction
            Implemented low drift odometry and  mapping algorithms from recent papers to improve accuracy
            Calibrated and dyed reconstruction results by applying camera information   
