--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@ layout: default
    </div>
 	
    <div style="text-align:center;">
-   <a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
-   </div>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>   </div>
 </body>
 
 
