--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
                       <li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
 		      <li>Andrew Ng. cs229: Machine Learning. Stanford.<br>
                       <li>Fei-Fei Li &amp Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
-		      <li>Wei Guo &amp Jiangying Liu:C++ Programing Design. Peking University.
+		      <li>Wei Guo &amp Jiangying Liu: C++ Programing Design. Peking University.
              </p>
     
    <div class="content anchor" id="research">  	      
@@ -84,7 +84,8 @@ layout: default
    </div>
 	
    <div style="text-align:center;">
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>   </div>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=280&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>	
+	</div>
 </body>
 
 
