--- a/index.html
+++ b/index.html
@@ -13,14 +13,8 @@ layout: default
             <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
             Email: anyirao [at] foxmail (dot) com<br>
             </p>
-             <table>
-              <tbody><tr><td>Address:</td><td><a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a></td></tr>
-              <tr><td></td><td>  <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China</td></tr>
-              <tr><td>Email:</td><td>anyirao [at] foxmail (dot) com</td></tr>
-            </tbody></table>
-		  
-	   </div>
-        </div>	   
+	  </div>
+   </div>	   
         <table><tr></tr></table>
 	<table><tr></tr></table>
 	  
@@ -68,26 +62,29 @@ layout: default
           <h3>Short Bio</h3>
            <p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University. 
                I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
-		   from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>. My research interests lie on the intersection of computer vision,
+		   from <a href="http://www.moe.gov.cn/">China Minstry of Education</a>. My research interests lie on the intersection of computer vision,
 		   machine learning and artificial intelligence. 
-           <p> I got a meritorious prize in national modeling contest.  <span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
+           <p> I got the first prize in an electronics design contest and the paper about it is published in Nanjing University 19th Art and Science Forum.<br>
+	       I got a meritorious prize in national modeling contest.  <span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
       </div>
    </div>
 	
    	
    <div class="content" >      
           <h3>Awards</h3>
-           <p>  National Scholarship, by Minstry of Education of China <br>
+           <p>  National Scholarship, from the China Minstry of Education <br>
                 Nanjing University Excellent Student Leader Award <br>
                 Nanjing University Excellent Student Award <br>
-	        Top Volunteer Excellent Award</p>
+	        Top Volunteer Excellence Award</p>
    </div>    
    
    <div class="content" >      
           <h3>Miscellaneous</h3>
            <p>Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  [Report]</a></span><br>
-              Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> </p>      
-   </div>
+              Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> <br>    
+              Vice president of a Young Volunteers Association <span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
+	      Bronze medal at Nanjing University 55th Sports Meeting <span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span>  
+           </p> </div>
 	
    <div style="text-align:center;">
 <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=280&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>	
