--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
                I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
 		   from <a href="http://www.moe.gov.cn/">China Minstry of Education</a>. My research interests lie on the intersection of computer vision,
 		   machine learning and artificial intelligence. 
-           <p> I got the first prize in an electronics design contest and the paper about it is published in Nanjing University 19th Art and Science Forum.<br>
+           <p> I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 19th Art and Science Forum.<br>
 	       I got a meritorious prize in national modeling contest.  <span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
       </div>
    </div>
