--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
     
    <div class="content anchor" id="academic">     
           <h3>Academic</h3>
-          <p>My GPA ranks No.1 in each academic year. All major curriculums are above 95 (A+). 
+           <p>My GPA ranks No.1 in each academic year. All major curriculums are above 95 (A+). 
              My overall GPA is 4.79. I am the top student among 183 classmates in my school. 
           
 	      <p>I finished my major curriculums in 2 years and I learned a lot from online courses. <br>
@@ -81,7 +81,7 @@ layout: default
    <div class="content" >      
           <h3>Miscellaneous</h3>
            <p>Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  [Report]</a></span><br>
-              Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> <br>    
+              Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a>. Joyful Snow Flakes wirtten by Chih-mo Hsu <span class="tag"><a href="http://pan.baidu.com/s/1nvvyJMh">  [Video]</a></span> <br>    
               Vice president of a Young Volunteers Association <span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
 	      Bronze medal at Nanjing University 55th Sports Meeting <span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span>  
            </p> </div>
