--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ layout: default
             <p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 		Aug.2016-Sep.2016    <br>
 	    Constructed three models to depict road circumstances and two model to predict car motion; Matlab, C. 
-            Wrote a sugestion report to ministry of transportation. 
+            Wrote a report to ministry of transportation. 
                  
            <p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
 		   Aug.2016-present &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
