--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ layout: default
           <h3>Short Bio</h3>
            <p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University. 
                I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
-		   from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>. My research interests lie on the intersection of computer vision,
+		   from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>. My current research interests lie on the intersection of computer vision,
 		   machine learning and artificial intelligence. 
            <p> I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 19th Art and Science Forum.<br>
-	       I got a meritorious prize in national modeling contest.  <span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
+	       I got a meritorious winner prize in 2016 National Mathematical Modeling Contest.  <span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
       </div>
    </div>
 	
