--- a/index.html
+++ b/index.html
@@ -69,8 +69,12 @@ layout: default
 		and real Tetris also disallows the majority of such rotations. Next up I detected when lines have been filled, removed them, 
 		kept and displayed score, and handled the situation where the grid gets full. Finally, scores, level, line clearing,
 		grid moving when line is cleared, and bonus scores for multiple lines added. 
-		
-	   </div>
+		<p><span style="font-weight: bold;">Student Information Management System;  C </span> <br>
+                The system is developed based on linked list.
+                It can input student_number, name, coursecode, credithours, semester, final marks for each subject and is able use text file. 
+                It calculates GPA for each student and is able to search a student by its name or GPA.  
+                Print Report for all students ordered by GPA ascending
+	</div>
 	   
    </div>
     
