--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
                       <li>Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
                       <li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
                       <li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
-		      <li>Andrew Ng. cs229: Machine Learning. Stanford.<br>
+		      <li>Andrew Ng. CS229: Machine Learning. Stanford.<br>
                       <li>Fei-Fei Li &amp Andrej Karpathy. CS231N: Convolutional Neural Networks for Visual Recognition. Stanford.<br>
 		      <li>Silvio Savarese. CS231A: Computer Vision: from 3D reconstruction to recognition. Stanford.<br>     
 		      <li>Wei Guo &amp Jiangying Liu: C++ Programing Design. Peking University.
