--- a/index.html
+++ b/index.html
@@ -26,14 +26,17 @@ layout: default
              My overall GPA is 4.79. I am the top student among 183 classmates in my school. 
           
 	      <p>I finished my major curricula in 2 years and I learned a lot from online courses. <br>
+		      <li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
+		      <li>John Tsitsiklis &amp Patrick Jaillet. 6.041: Introduction to Probability - The Science of Uncertainty. MIT. <br>
 		      <li>David Jerison. 18.01: Single Variable Calculus. MIT.<br>
-                      <li>Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
-                      <li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
+                      <li>Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>                      
                       <li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
+		      <li>Ira Pohl. C++ For C Programmers. UCSC.<br>
+		      <li>Charles Severance. Python Data Structures. University of Michigan.<br>
 		      <li>Andrew Ng. CS229: Machine Learning. Stanford.<br>
                       <li>Fei-Fei Li &amp Andrej Karpathy. CS231N: Convolutional Neural Networks for Visual Recognition. Stanford.<br>
 		      <li>Silvio Savarese. CS231A: Computer Vision: from 3D reconstruction to recognition. Stanford.<br>     
-		      <li>Wei Guo &amp Jiangying Liu: C++ Programing Design. Peking University.
+		      
              </p>
 	
 	<div class="content anchor" id="research">  	      
