--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ layout: default
       <div class="text">
           <h3>Short Bio</h3>
            <p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University. 
-               I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
+               I am a student member of <a href="https://www.ieee.org/index.html">IEEE</a>, 
+		  a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
 		   from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>. My current research interests lie on the intersection of computer vision,
 		   machine learning and artificial intelligence. 
            <p> I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 19th Art and Science Forum. <span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span><br>
