--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ layout: default
                 It can input student_number, name, coursecode, credithours, semester, final marks for each subject and is able use text file. 
                 It calculates GPA for each student and is able to search a student by its name or GPA.  
                 Print Report for all students ordered by GPA ascending
+			
+		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> <br>	
+		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
 	</div>
 	   
    </div>
