--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ layout: default
                 It calculates GPA for each student and is able to search a student by its name or GPA.  
                 Print Report for all students ordered by GPA ascending
 			
-		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> <br>	
+		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> 	
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
 	</div>
 	   
