--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
 	<div class="content anchor" id="research">  	      
           <h3>Research</h3>     
 	   <p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
-		   Aug.2016-present &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
+		Aug.2016-present &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
 	   Collected point cloud datasets for indoor 3D scene reconstruction.  <br>
            Implemented low drift odometry and mapping algorithms from recent papers to improve accuracy; Python.  <br>
            Calibrated and dyed reconstruction results by applying camera information. 
@@ -98,9 +98,11 @@ layout: default
                 The system is developed based on linked list.
                 It can input student_number, name, coursecode, credithours, semester, final marks for each subject and is able use text file. 
                 It calculates GPA for each student and is able to search a student by its name or GPA.  
-                Print Report for all students ordered by GPA ascending
+                Print Report for all students ordered by GPA ascending.
 			
-		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> 	
+		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> <br>
+		Monte Carlo methods (or Monte Carlo experiments) are a broad class of computational algorithms that rely on repeated random sampling to obtain numerical results. 
+		I used them to calculate definite intergrals and compared it with numerical methods and improved it.
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
 	</div>
 	   
