--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ layout: default
 		And I made a place to store the contents of the bucket (game board), when a piece reaches the bottom it won't vanish. <br>
 		Collision detection was the next thing I need to handle with. 
 		Finally, scores, level, line clearing, grid moving when line is cleared, and bonus scores for multiple lines added. 
+			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
 			 
 		<p><span style="font-weight: bold;">Cluster sky objects; Python</span> <br>
 		Cluster a catalog of 2 million sky objects into similar objects, e.g., galaxies, nearby stars, quasars, etc. These sky objects have 7 features. 
