--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@ layout: default
 		Monte Carlo methods (or Monte Carlo experiments) are a broad class of computational algorithms that rely on repeated random sampling to obtain numerical results. 
 		I used them to calculate definite intergrals and compared it with numerical methods and improved it.
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
+		
+		<p><span style="font-weight: bold;">Assembly Language Practice; The Principle of Microcomputers and Interface Techniques </span>
+		<span class="tag"><a href="papers/masm.pdf"> [Paper]</a></span>
+			
 	</div>
 	   
 
