--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
            Calibrated and dyed reconstruction results by applying camera information. 
           
             <p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
-		Aug.2016-Sep.2016    <br>
+		Aug.2016-Sep.2016 &nbsp Dec.2016-Jan.2017   <br>
 	    Constructed three models to depict road circumstances and two models to predict car motion; Matlab, C. 
 		    <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span> <br>
             Wrote a report to ministry of transportation. 
