--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: default
 		Oct.2014-Dec.2015 &nbsp  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
 	    Designed a 64 road low-noise pre-amplifier using a symmetric structure.  <br>
             Drew 8 layers PCB; Altium.  <br>
-            Reduced noise by 100 times.
+            Reduced noise by 100 times.  <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span>
 	</div>            
 	<div class="content" >
 	   <h3>Course Design</h3>
