--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
 	<div class="content anchor" id="research">  	      
           <h3>Research</h3>     
 	   <p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
-		Aug.2016-present &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
+		<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
 	   Collected point cloud datasets for indoor 3D scene reconstruction.  <br>
            Implemented low drift odometry and mapping algorithms from recent papers to improve accuracy; Python.  <br>
            Calibrated and dyed reconstruction results by applying camera information. 
@@ -94,12 +94,10 @@ layout: default
 		place it in the cluster whose current centroid is the nearest, and update the centroid of the cluster. After all points are assigned,
 		fix the centroids of the k clusters. 
 		Reassign all points to their closest centroid. (Sometimes moves points between clusters.)	 
-			 
-		<p><span style="font-weight: bold;">Student Information Management System; C </span> <br>
-                The system is developed based on linked list.
-                It can input student_number, name, coursecode, credithours, semester, final marks for each subject and is able use text file. 
-                It calculates GPA for each student and is able to search a student by its name or GPA.  
-                Print Report for all students ordered by GPA ascending.
+		
+		<p><span style="font-weight: bold;">Construction of a Spam Filtering System; Machine Learning</span> <br>
+		Preprocessed data sets with the html2text;
+		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
 		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> <br>
 		Monte Carlo methods (or Monte Carlo experiments) are a broad class of computational algorithms that rely on repeated random sampling to obtain numerical results. 
