--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@ layout: default
           
             <p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 		<span style="font-style: italic;">Aug.2016-Sep.2016 &nbsp Dec.2016-Jan.2017 </span> <br>
-		Constructed three models to depict road circumstances and two models to predict car motion; Matlab, C. 
+		Constructed three models to depict road circumstances and two models to predict car motion; Matlab, C.<br>
+		    Optimized our solutions in terms of traffic load, vehicle type and different kinds of tollbooths.
 		    <span class="tag"><a href="papers/mcm.pdf"> [Paper]</a></span> <br>
 		Wrote a report to ministry of transportation. 
 		   
