--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
 		  a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
 		   from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>. My current research interests lie on the intersection of computer vision,
 		   machine learning and artificial intelligence. 
-           <p> I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 19th Art and Science Forum. <span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span><br>
+           <p> I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 19th Art and Science Forum. <span class="tag"><a href="papers/basic_forum_low_noise_preamplifier.pdf"> [Paper]</a></span><br>
 	       I got a meritorious winner prize in 2016 National Mathematical Modeling Contest. <span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
 	</div>
 </div>   
