--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ layout: default
 		<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
 	   Collected point cloud datasets for indoor 3D scene reconstruction.  <br>
            Implemented low drift odometry and mapping algorithms from recent papers to improve accuracy; Python.  <br>
-           Calibrated and dyed reconstruction results by applying camera information. 
+           Calibrated and dyed reconstruction results by applying camera information.  <span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span>
           
             <p><span style="font-weight: bold;">Road Car Flow and Its Effect on Roads, leader</span> <br>
 		<span style="font-style: italic;">Aug.2016-Sep.2016 &nbsp Dec.2016-Jan.2017 </span> <br>
