--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ layout: default
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
 		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> <br>
-		Monte Carlo methods (or Monte Carlo experiments) are a broad class of computational algorithms that rely on repeated random sampling to obtain numerical results. 
-		I used them to calculate definite intergrals and compared it with numerical methods and improved it.
+		Monte Carlo method relys on repeated random sampling to obtain numerical results. 
+		I used it to calculate definite intergrals and compared it with numerical methods and improved it.
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
 		
 		<p><span style="font-weight: bold;">Assembly Language Practice; The Principle of Microcomputers and Interface Techniques </span>
