--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ layout: default
 		Reduced noise by 100 times.  <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span>
 	</div>            
 	<div class="content" >
-	   <h3>Course Design</h3>
+	   <h3>Course Projects</h3>
 		 <p><span style="font-weight: bold;">Tetris Game; C++ </span> <br>
 		I began with shape management and piece movement and edge collisions. 
 		To make the pieces move I updated them and moved them down one row each time a fixed time interval expires.
@@ -105,9 +105,12 @@ layout: default
 		Monte Carlo method relys on repeated random sampling to obtain numerical results. 
 		I used it to calculate definite intergrals and compared it with numerical methods and improved it.
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
+			
+		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span>
+		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
 		
 		<p><span style="font-weight: bold;">Assembly Language Practice; The Principle of Microcomputers and Interface Techniques </span>
-		<span class="tag"><a href="papers/masm.pdf"> [Paper]</a></span>
+		<span class="tag"><a href="papers/masm.pdf"> [Project Report]</a></span>
 			
 	</div>
 	   
