--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@ layout: default
 		Designed a 64 road low-noise pre-amplifier using a symmetric structure.  <br>
 		Drew 8 layers PCB; Altium.  <br>
 		Reduced noise by 100 times.  <span class="tag"><a href="papers/Low_noise_preamplifier.pdf"> [Presentation]</a></span>
-	</div>            
-	<div class="content" >
+	</div>        
+	
+	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
 		 <p><span style="font-weight: bold;">Tetris Game; C++ </span> <br>
 		I began with shape management and piece movement and edge collisions. 
