--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@ layout: default
 	<h3>Short Bio</h3>
 		<p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University.
 		I am a student member of <a href="https://www.ieee.org/index.html">IEEE</a>,
-		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer 
-			Training Program</a>,
+		a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">
+			Excellent Engineer Training Program</a>,
 		from <a href="http://www.moe.gov.cn/">the China Minstry of Education</a>.
 		My current research interests lie on the intersection of computer vision, machine learning and artificial intelligence. 
 		
 		<p> I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 
-		19th Art and Science Forum. <span class="tag"><a href="papers/basic_forum_low_noise_preamplifier.pdf"> [Paper]</a></span><br>
+		19th Art and Science Forum. 
+			<span class="tag"><a href="papers/basic_forum_low_noise_preamplifier.pdf"> [Paper]</a></span><br>
 		I got a meritorious winner prize in 2016 National Mathematical Modeling Contest. 
 			<span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
 	</div>
@@ -58,7 +59,8 @@ layout: default
 	<div class="content anchor" id="research">  	      
 	<h3>Research</h3>     
 	<p><span style="font-weight: bold;">3D Reconstruction Using (Light Detection And Ranging) Lidar and Camera</span> <br>
-	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), Nanjing University <br> 
+	<span style="font-style: italic;"> Aug.2016-present </span> &nbsp  Visual Sensing and Graphics Lab (VISG Lab), 
+		Nanjing University <br> 
 		Collected point cloud datasets for indoor 3D scene reconstruction.  <br>
 		Implemented low drift odometry and mapping algorithms from recent papers to improve accuracy; Python.
 			<span class="tag"><a href="papers/3D_re.pdf"> [Presentation]</a></span> <br>
@@ -92,10 +94,13 @@ layout: default
 			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
 			 
 		<p><span style="font-weight: bold;">Cluster sky objects; Python</span> <br>
-		Cluster a catalog of 2 million sky objects into similar objects, e.g., galaxies, nearby stars, quasars, etc. These sky objects have 7 features. 
+		Cluster a catalog of 2 million sky objects into similar objects, e.g., galaxies, nearby stars, quasars, etc. 
+			These sky objects have 7 features. 
 		Use Euclidean cluster algorithm. Each cluster has a well defined centroid. <br>
-		Assumes Euclidean space and start by picking k, the number of clusters. Initialize clusters by picking one point per cluster. Then for each point, 
-		place it in the cluster whose current centroid is the nearest, and update the centroid of the cluster. After all points are assigned,
+		Assumes Euclidean space and start by picking k, the number of clusters. Initialize clusters by picking one point per 
+			cluster. Then for each point, 
+		place it in the cluster whose current centroid is the nearest, and update the centroid of the cluster. After all points 
+			are assigned,
 		fix the centroids of the k clusters. 
 		Reassign all points to their closest centroid. (Sometimes moves points between clusters.)	 
 		
@@ -103,7 +108,8 @@ layout: default
 		Preprocessed data sets with the html2text;
 		Trained the model with Logistic Regression, Naive Bayes, SVM and CNN.
 			
-		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; Probability and Stochastic Process </span> <br>
+		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; 
+			Probability and Stochastic Process </span> <br>
 		Monte Carlo method relys on repeated random sampling to obtain numerical results. 
 		I used it to calculate definite intergrals and compared it with numerical methods and improved it.
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
@@ -111,7 +117,8 @@ layout: default
 		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span>
 		<span class="tag"><a href="papers/CV_Report.pdf"> [Project Report]</a></span>
 		
-		<p><span style="font-weight: bold;">Assembly Language Practice; The Principle of Microcomputers and Interface Techniques </span>
+		<p><span style="font-weight: bold;">Assembly Language Practice;
+			The Principle of Microcomputers and Interface Techniques </span>
 		<span class="tag"><a href="papers/masm.pdf"> [Project Report]</a></span>
 			
 	</div>
@@ -126,15 +133,26 @@ layout: default
 		
 	<div class="content" >      
           <h3>Miscellaneous</h3>
-		<p>Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  [Report]</a></span><br>
-		Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> &nbsp (Joyful Snowflakes wirtten by Chih-mo Hsu <span class="tag"><a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">  [Video]</a></span>) <br>    
-		Vice president of a Young Volunteers Association <span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
-		Bronze medal at Nanjing University 55th Sports Meeting <span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span>  
+		<p>Internship in CHANGJIANG ELEC. TECH. (JCET) 
+			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
+			[Report]</a>
+			</span><br>
+		Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> &nbsp 
+			(Joyful Snowflakes wirtten by Chih-mo Hsu 
+			<span class="tag">
+			<a href="http://v.youku.com/v_show/id_XMjA1ODIzMjQwOA==.html?spm=a2hzp.8244740.userfeed.5!2~5~5~5!3~5~A.Rb6hYG">
+			[Video]</a>
+			</span>) <br>    
+		Vice president of a Young Volunteers Association 
+			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/6965-2015-12-02-16-41-07">  [Report]</a></span> <br>   
+		Bronze medal at Nanjing University 55th Sports Meeting 
+			<span class="tag"><a href="http://tuanwei.nju.edu.cn/article/4545-201411030008">  [Report]</a></span>  
 		</p> 
 	</div>
 			
 	<div style="text-align:center;">
-	<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=280&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>	
+	<script type='text/javascript' id='clustrmaps' 
+		src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=280&d=NoxTntTwijcGNPPsm7CM_ctT1E79_SAsBke-aS4Vw4Q&t=tt'></script>	
 	</div>
 </body>
 
