--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ layout: default
 			
 		<p><span style="font-weight: bold;">Monte Carlo Method for Solving Deﬁnite Integrals; 
 			Probability and Stochastic Process </span> <br>
-		Monte Carlo method relys on repeated random sampling to obtain numerical results. 
-		I used it to calculate definite intergrals and compared it with numerical methods and improved it.
+		Monte Carlo method relies on repeated random sampling to obtain numerical results. 
+		I used it to calculate definite integrals and compared it with numerical methods and improved it.
 		<span class="tag"><a href="papers/monte_carlo_method.pdf"> [Paper]</a></span>
 			
 		<p><span style="font-weight: bold;">3D Human Poses Estimation from a single image; Computer Vision </span>
