--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ layout: default
 	<div class="content anchor" id="academic">     
 	<h3>Academic</h3>
 		<p>My GPA ranks No.1 in each academic year. All major curricula are above 95 (A+). 
-		My overall GPA is 3.956. I am the top student among 183 classmates in my school. 
+		My overall GPA is 3.96 out of 4.00. I am the top student among 183 classmates in my school. 
 			
 		<p>I finished my major curricula in 2 years and I learned a lot from online courses. <br>
 			<li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
