--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 		
 		<p> I won the first prize in an electronics design contest and the paper about it was published in Nanjing University 
 		19th Art and Science Forum. 
-			<span class="tag"><a href="papers/basic_forum_low_noise_preamplifier.pdf"> [Paper]</a></span><br>
+			<span class="tag"><a href="papers/basic_forum.pdf"> [Paper]</a></span><br>
 		I got a meritorious winner prize in 2016 National Mathematical Modeling Contest. 
 			<span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
 	</div>
