--- a/index.html
+++ b/index.html
@@ -124,17 +124,53 @@ layout: default
 		<span class="tag"><a href="papers/masm.pdf"> [Project Report]</a></span>
 			
 	</div>
+
+	<div class="content" >      
+		<h3>Leadership Experience</h3>
+		<p>  Grade Leader in the Student Work Office at Nanjing University &nbsp &nbsp 
+			<span style="font-style: italic;"> 10/2014-10/2015</span> <br>
+		Instructed class monitors on effective class management; 
+		Assisted class monitors with presentation preparation and delivery of Campus life essentials to freshman students;
+		Assisted Professors in marking and helping students understand key problem areas;
+		Provided essential support to all freshman students in preparing for CET, CRE
+                </p>
+		
+		<p>  Vice President of a Young Volunteers Association at Nanjing University &nbsp &nbsp 
+			<span style="font-style: italic;"> 06/2015-06/2016</span> <br>
+		Organized volunteers to assist 865 teams containing 2695 
+			candidates in the National Undergraduate Electronics Design Contest;
+		Recognized as a key team leader in the successful Warm 100 of China Foundation for the Poverty Alleviation Campaign, 
+			and our group received the excellent group award.
+                </p>
+		
+		<p>  Team Leader for the Nanjing University Elderly care Volunteer Program  &nbsp &nbsp 
+			<span style="font-style: italic;"> 09/2015-04/2016</span> <br>
+		With the team visited elderly people in their home and provided housekeeping, 
+			food shopping and companionship; 
+		As team leader, designed a survey to analyze volunteer activities effectiveness 
+			and determined how to improve the experience for the elderly people 
+                </p>
+		
+	</div> 
 		
 	<div class="content" >      
 		<h3>Awards</h3>
 		<p>  National Scholarship, from the China Minstry of Education <br>
+		Nanjing University People Scholarship<br>
                 Nanjing University Excellent Student Leader Award <br>
                 Nanjing University Excellent Student Award <br>
 	        Top Volunteer Excellence Award</p>
+		Calculus World Cup world ranking 32th, National Taiwan University<br>
 	</div>    
 		
 	<div class="content" >      
           <h3>Miscellaneous</h3>
+		<p>
+		Languages / Software: C, C++, MATLAB, Python, HTML, CSS, Markdown, Altium, TINA; <br>
+		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X; <br>
+		TOEFL: 100, GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
+		</p>
+		
 		<p>Internship in CHANGJIANG ELEC. TECH. (JCET) 
 			<span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html"> 
 			[Report]</a>
