--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ layout: default
 		<p>
 		Languages / Software: C, C++, MATLAB, Python, HTML, CSS, Markdown, Altium, TINA; <br>
 		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X; <br>
-		TOEFL: 100, GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
+		English Proficiency Test: TOEFL 100, GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
 		
 		<p>Internship in CHANGJIANG ELEC. TECH. (JCET) 
