--- a/index.html
+++ b/index.html
@@ -87,12 +87,11 @@ layout: default
 	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
 		 <p><span style="font-weight: bold;">Tetris Game; C++ </span> <br>
-		I began with shape management and piece movement and edge collisions.
-		To make the pieces move I updated them and moved them down one row each time a fixed time interval expires.
-		This interval is based on what level of the game you are on.
-		And I made a place to store the contents of the bucket (game board), when a piece reaches the bottom it won't vanish. <br>
-		Collision detection was the next thing I need to handle with.
-		Finally, scores, level, line clearing, grid moving when line is cleared, and bonus scores for multiple lines added. 
+		Shape management, piece movement and edge collisions. To make the pieces move 
+			 I updated them and moved them down one row each time a fixed time interval expires. <br>
+		Collision detection. I detected when lines have been filled, removed them, kept and displayed score, and handled 
+			 the situation where the grid gets full.<br>
+		Scores, level, line clearing, grid moving when line is cleared, and bonus scores for multiple lines added.
 			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
 			 
 		<p><span style="font-weight: bold;">Cluster sky objects; Python</span> <br>
@@ -167,9 +166,11 @@ layout: default
 	<div class="content" >      
           <h3>Miscellaneous</h3>
 		<p>
-		Languages / Software: C, C++, MATLAB, Python, HTML, CSS, Markdown, Altium, TINA; <br>
-		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X; <br>
-		English Proficiency Test: TOEFL 100, GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
+		Programming/ Software: Familiar with C, C++, MATLAB, Python  &nbsp Experienced on HTML, CSS, Assembly, Altium, TINA <br>
+		Research Related: libSVM, VLFeat, CVX, SPArse Modeling Software, Git, Octave<br>
+		Document: LaTex, Markdown, MS Office<br>
+		Operating Systems: Ubuntu 14/16, Windows XP/7/10, OS X <br>
+		English Proficiency Test: TOEFL 100; GRE: 151(Verbal)+170(Math, full mark)+3.5(Writing)
 		</p>
 		
 		<p>Research Intern/ Group leader in CHANGJIANG ELEC. TECH. 
