--- a/index.html
+++ b/index.html
@@ -87,23 +87,17 @@ layout: default
 	<div class="content anchor" id="project">  
 	   <h3>Course Projects</h3>
 		 <p><span style="font-weight: bold;">Tetris Game; C++ </span> <br>
-		Shape management, piece movement and edge collisions. To make the pieces move 
-			 I updated them and moved them down one row each time a fixed time interval expires. <br>
-		Collision detection. I detected when lines have been filled, removed them, kept and displayed score, and handled 
-			 the situation where the grid gets full.<br>
-		Scores, level, line clearing, grid moving when line is cleared, and bonus scores for multiple lines added.
+		Managed piece shape and edge collisions. Updated pieces and moved them down one row each time a fixed time 
+			 interval expires;
+		Detected when lines have been filled, removed them, kept and displayed score, and handled 
+			 the situation where the grid gets full;
+		Calculated scores, level and cleared line. Moved grid when line is cleared, and 
+			 gave bonus scores for multiple lines added.
 			 <span class="tag"><a href="papers/Tetris_game.txt"> [Details]</a></span>
 			 
 		<p><span style="font-weight: bold;">Cluster sky objects; Python</span> <br>
-		Cluster a catalog of 2 million sky objects into similar objects, e.g., galaxies, nearby stars, quasars, etc. 
-			These sky objects have 7 features. 
-		Use Euclidean cluster algorithm. Each cluster has a well defined centroid. <br>
-		Assumes Euclidean space and start by picking k, the number of clusters. Initialize clusters by picking one point per 
-			cluster. Then for each point, 
-		place it in the cluster whose current centroid is the nearest, and update the centroid of the cluster. After all points 
-			are assigned,
-		fix the centroids of the k clusters. 
-		Reassign all points to their closest centroid. (Sometimes moves points between clusters.)	 
+		Clustered a catalog of 2 million sky objects into similar objects, e.g. galaxies, nearby stars, quasars, etc. 
+			<span class="tag"><a href="papers/Cluster.txt"> [Details]</a></span>
 		
 		<p><span style="font-weight: bold;">Construction of a Spam Filtering System; Machine Learning</span> <br>
 		Preprocessed data sets with the html2text;
